simplify getPatientIdentitiesByMbi() method